--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express": "4.17.1",
         "prop-types": "15.7.2",
         "react": "17.0.1",
-        "react-dom": "17.0.1"
+        "react-dom": "17.0.1",
+        "react-router-dom": "^6.16.0"
     }
 }
